# cot_presentation

./: .gitignore  README.md  main.py  pyproject.toml
apps/: motiv_slide.py  prompts.txt
src/cot_pres/: constants.py  few_shot.py  utils.py
